[gd_scene load_steps=24 format=3 uid="uid://bhewr48gsl0w7"]

[ext_resource type="Texture2D" uid="uid://clmjhusf88rbp" path="res://Assets/Texture/Game/Background/Pink.png" id="1_we61c"]
[ext_resource type="Script" path="res://Script/Game/ChangeColor/block_creater.gd" id="2_1loet"]
[ext_resource type="Script" path="res://Script/Game/ChangeColor/player.gd" id="3_8eakt"]
[ext_resource type="Texture2D" uid="uid://chpslfmt6cc7y" path="res://Assets/Texture/Game/Main Characters/Pink Man/Run (32x32).png" id="3_36dla"]
[ext_resource type="Texture2D" uid="uid://duj3iymsydi4x" path="res://Assets/Texture/Game/Main Characters/Mask Dude/Fall (32x32).png" id="4_ip4oy"]
[ext_resource type="Texture2D" uid="uid://bit8jj7dff2ts" path="res://Assets/Texture/Game/Main Characters/Mask Dude/Run (32x32).png" id="5_3ubnx"]
[ext_resource type="Texture2D" uid="uid://bpw6axxyb1wc8" path="res://Assets/Texture/Game/Main Characters/Pink Man/Jump (32x32).png" id="6_ovp7h"]
[ext_resource type="Texture2D" uid="uid://gip6nrsiey32" path="res://Assets/Texture/Game/Main Characters/Mask Dude/Jump (32x32).png" id="7_gv67q"]
[ext_resource type="Texture2D" uid="uid://c3wkk7ysgumvd" path="res://Assets/Texture/Game/Main Characters/Pink Man/Fall (32x32).png" id="8_e0235"]
[ext_resource type="Texture2D" uid="uid://d4ju14p2jua4e" path="res://Assets/Texture/Game/Main Characters/Pink Man/Double Jump (32x32).png" id="9_k4aoq"]
[ext_resource type="Texture2D" uid="uid://ygiwwbkfuu37" path="res://Assets/Texture/Game/Main Characters/Mask Dude/Double Jump (32x32).png" id="10_cinvl"]
[ext_resource type="PackedScene" uid="uid://cm5416ykr3oaj" path="res://Scene/Manager.tscn" id="12_pa38y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gt711"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_ouy6d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("yellow:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ip4oy")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pink:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("yellow:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_cbgee"]
resource_name = "double_jump"
length = 0.28
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pink:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("9_k4aoq")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pink:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pink:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("yellow:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("10_cinvl")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("yellow:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("yellow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_33bu7"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pink:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("8_e0235")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pink:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pink:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("yellow:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_ip4oy")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("yellow:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("yellow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_r72re"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pink:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_ovp7h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pink:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pink:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("yellow:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_gv67q")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("yellow:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("yellow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_a4mq3"]
resource_name = "run"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("pink:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_36dla")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("pink:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("pink:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("yellow:texture")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_3ubnx")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("yellow:hframes")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("yellow:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mpo0t"]
_data = {
"RESET": SubResource("Animation_ouy6d"),
"double_jump": SubResource("Animation_cbgee"),
"fall": SubResource("Animation_33bu7"),
"jump": SubResource("Animation_r72re"),
"run": SubResource("Animation_a4mq3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dmkoj"]
size = Vector2(17.5, 3.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i8imy"]
size = Vector2(22.4999, 29.375)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nmonl"]
size = Vector2(1931.25, 70.0001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8o6wp"]
size = Vector2(1920, 1080)

[node name="ChangeColor" type="Node2D"]
scale = Vector2(0.4, 0.4)

[node name="Control" type="Control" parent="."]
z_index = -1
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_we61c")
stretch_mode = 1

[node name="Panel" type="Panel" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_gt711")
metadata/_edit_use_anchors_ = true

[node name="block_creater" type="Node2D" parent="."]
position = Vector2(1577.5, 782.5)
scale = Vector2(4, 4)
script = ExtResource("2_1loet")
size = 30

[node name="Timer" type="Timer" parent="block_creater"]
wait_time = 2.2

[node name="pink" type="Node2D" parent="block_creater"]

[node name="yellow" type="Node2D" parent="block_creater"]

[node name="player" type="CharacterBody2D" parent="."]
texture_filter = 1
position = Vector2(1037.5, 265)
scale = Vector2(4, 4)
collision_layer = 3
collision_mask = 3
script = ExtResource("3_8eakt")

[node name="pink" type="Sprite2D" parent="player"]
position = Vector2(-0.625, -0.625)
texture = ExtResource("9_k4aoq")
hframes = 6
frame = 1

[node name="yellow" type="Sprite2D" parent="player"]
visible = false
texture = ExtResource("4_ip4oy")
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="player"]
libraries = {
"": SubResource("AnimationLibrary_mpo0t")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(0.625, 11.25)
shape = SubResource("RectangleShape2D_dmkoj")

[node name="Area2D" type="Area2D" parent="player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player/Area2D"]
position = Vector2(9.15527e-05, -0.9375)
shape = SubResource("RectangleShape2D_i8imy")

[node name="OK" type="Timer" parent="player"]
wait_time = 0.18
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 1080)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(961.875, -34.9999)
shape = SubResource("RectangleShape2D_nmonl")

[node name="Manager" parent="." instance=ExtResource("12_pa38y")]

[node name="Button" type="TouchScreenButton" parent="."]
unique_name_in_owner = true
position = Vector2(960, 540)
shape = SubResource("RectangleShape2D_8o6wp")
passby_press = true

[connection signal="timeout" from="block_creater/Timer" to="block_creater" method="_on_timer_timeout"]
[connection signal="area_entered" from="player/Area2D" to="player" method="_on_area_2d_area_entered"]
[connection signal="timeout" from="player/OK" to="player" method="_on_ok_timeout"]
[connection signal="body_entered" from="Area2D" to="player" method="_on_area_2d_body_entered"]
